add model add config add service add range on param add count limit add interface added new data on appsettings added new configuration added singletons

--- a/Coding.Exam.RainFallAPI/appsettings.json
+++ b/Coding.Exam.RainFallAPI/appsettings.json
@@ -8,11 +8,15 @@
 	"AllowedHosts": "*",
 
 	"OpenAPIDoc": {
+		"Title": "Rainfall Api",
 		"contract": {
 			"Name": "Sorted",
 			"url": "https://www.sorted.com"
 		},
 		"Description": "An API which provides rainfall reading data",
 		"Version": "1.0"
+	},
+	"RainFallConfig": {
+		"BaseUrl": "http://environment.data.gov.uk/flood-monitoring"
 	}
 }
